--- a/index.html
+++ b/index.html
@@ -27,32 +27,22 @@
     <h2 id="about-me">About me</h2>
 
     <p>
-        I am an MA student in Political Science at the University of Toronto. My research interests include international
-        relations, public policy and political economy, with a focus on the politics of trade, international institutions, 
-        and trade agreements. My research is motivated by the central question: 
-        Which are the consequences of decomposed trade policy effects?
+        I am an MA student in Political Science at the University of Toronto. My research interests include political 
+        economy and public policy, with a focus on the politics of trade agreements and sanctions.
     </p>
 
     <p>
-        I am particularly interested in changes in production and consumption prices, internal and external multi-lateral
-        resistances and how these changes create trade-induced changes in employment and other measures of economic welfare.
-        Such changes can be understood as costs that justify an incumbent government to justify opposition to trade based on
-        electoral calculations, even if it is economically inefficient, and protect organized or unorganized industries.
-    </p>
-    
-    <p>These interest areas are directly linked to the Sustainable Development Goals (SDGs) of 
-        <a href="https://www.un-ilibrary.org/content/sdgs/sdg9">Industry, Innovation and Infrastructure</a> and 
-        <a href="https://www.un-ilibrary.org/content/sdgs/sdg16">Peace, Justice and Strong Institutions</a>.
+        I aim to corroborate and expand sub-national trade data, and also use the Structural Gravity Model of Trade to 
+        computationally simulate the impact of policy changes on different populations. Trade agreements and sanctions 
+        have direct implications on production and consumption prices, and as a derived result, there are consequential 
+        changes in employment and other measures of economic welfare. This analysis may help to negotiate better trade 
+        agreements and effective sanctions.
     </p>
 
     <p>
-        I have a Master in Statistics from the Catholic University and an Engineering degree from the University of Chile.
-        I can provide my CV (academic/profesional) upon request.
-    </p>
-    
-    <p>
-        You can reach me at hello+spam@pacha.dev or mv.sepulveda+spam@mail.utoronto.ca (please remove the +spam or
-        your messages will go to the spam folder).
+        I have a Master in Statistics from the Catholic University of Chile and an Engineering degree from the 
+        University of Chile. I can provide my CV (academic/profesional) upon request. You can reach me at 
+        m.sepulveda+spam@mail.utoronto.ca (please remove the +spam or your messages will go to the spam folder).
     </p>
 
     <h2 id="research">Research</h2>
@@ -60,7 +50,7 @@
     <h3>Research Interests</h3>
 
     <p>
-        International Political Economy: Politics of Trade, Market Access, Tariff and Non-Tariff Measures.
+        International Relations: Trade Agreements, Sanctions, Tariff and Non-Tariff Measures.
     </p>
 
     <p>
@@ -68,7 +58,7 @@
     </p>
 
     <p>
-        Research Methods: Quantitative Methods, General Equilibrium Estimation, Generalized Linear Models.
+        Research Methods: Generalized Linear Models, Structural Gravity Model, General Equilibrium Estimation.
     </p>
 
     <h3>Published Articles</h3>
@@ -77,12 +67,6 @@
         Wölwer, A.L., Burgard, J.P., Kunst, J., and Vargas Sepúlveda, M. "Gravity: Estimation Methods for Gravity Models in R."
         <i>Journal of Open Source Software</i> 3, no. 31 (November 19, 2018): 1038. <a href="https://doi.org/10.21105/joss.01038">
             https://doi.org/10.21105/joss.01038</a>.
-    </p>
-
-    <p>
-        Vargas Sepúlveda, M. "Economiccomplexity: Computational Methods for Economic Complexity."
-        <i>Journal of Open Source Software</i> 5, no. 46 (February 19, 2020): 1866. <a href="https://doi.org/10.21105/joss.01866">
-            https://doi.org/10.21105/joss.01866</a>.
     </p>
 
     <h3>Pre-Prints</h3>
