--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h4>Master in Political Science</h4>
 
     <p>
-        Vargas Sepúlveda, M. "Disaggregated Economic Effects of FTAs." University of Toronto, 2023 (Expected).
+        Vargas Sepúlveda, M. "Smart Trade Policy Toolkits" University of Toronto, 2023 (Expected, title may slightly change).
     </p>
 
     <h4>Master in Statistics</h4>
