--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
     </p>
 
     <p>
-        I aim to corroborate and expand sub-national trade data, and also use the Structural Gravity Model of Trade to 
-        computationally simulate the impact of policy changes on different populations. Trade agreements and sanctions 
-        have direct implications on production and consumption prices, and as a derived result, there are consequential 
-        changes in employment and other measures of economic welfare. This analysis may help to negotiate better trade 
-        agreements and effective sanctions.
+        I intend to explore how Generalized Linear Models, in particular the Structural Gravity Model, can be used to 
+        computationally simulate the impact of political decisions, such as a sanction being implemented. The model 
+        shows how the resulting changes in one sector in one country causes a chain reaction with consequences in GDP 
+        and other measures of economic welfare for third party countries.
     </p>
 
     <p>
