--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3.org/TR/html4/loose.dtd">
 <html>
 
 <head>
@@ -206,7 +206,7 @@
             href="https://www.buymeacoffee.com/pacha/extras">Buy Me a Coffee</a>. I am a certified Tidyverse and Shiny
         instructor by <a href="https://education.rstudio.com/trainers">RStudio</a> and a Software Carpentry Instructor.</p>
 
-    <a href="https://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-html401"
+    <a href="https://validator.w3.org/check?uri=referer"><img src="https://www.w3.org/Icons/valid-html401"
             alt="Valid HTML 4.01 Transitional" height="31" width="88" align="right", style="border: 10px solid #fafafa"></a>
 
     
