--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <h2 id="about-me">About me</h2>
 
     <p>
-        I am an MA student in Political Science at the University of Toronto. My research interests include political 
-        economy and public policy, with a focus on the politics of trade agreements and sanctions.
+        I am an MA student in Political Science at the University of Toronto. My research interests include International 
+        Relations, Canadian Politics and Public Policy, with a focus on the politics of trade agreements and sanctions.
     </p>
 
     <p>
