--- a/index.html
+++ b/index.html
@@ -27,21 +27,15 @@
     <h2 id="about-me">About me</h2>
 
     <p>
-        I am an MA student in Political Science at the University of Toronto. My research interests include International 
-        Relations, Canadian Politics and Public Policy, with a focus on the politics of trade agreements and sanctions.
+        I am an MA student in Political Science at the University of Toronto. My research interests include International Relations, Canadian Politics and Public Policy, with a focus on the politics of trade agreements and sanctions.
     </p>
 
     <p>
-        I intend to explore how Generalized Linear Models, in particular the Structural Gravity Model, can be used to 
-        computationally simulate the impact of political decisions, such as a sanction being implemented. The model 
-        shows how the resulting changes in one sector in one country causes a chain reaction with consequences in GDP 
-        and other measures of economic welfare for third party countries.
+        I intend to explore how Generalized Linear Models, in particular the Structural Gravity Model, can be used to computationally simulate the impact of political decisions, such as a sanction being implemented. The model shows how the resulting changes in one sector in one country causes a chain reaction with consequences in GDP and other measures of economic welfare for third party countries.
     </p>
 
     <p>
-        I have a Master in Statistics from the Catholic University of Chile and an Engineering degree from the 
-        University of Chile. I can provide my CV (academic/profesional) upon request. You can reach me at 
-        m.sepulveda+spam@mail.utoronto.ca (please remove the +spam or your messages will go to the spam folder).
+        I have a Master in Statistics from the Catholic University of Chile and an Engineering degree from the University of Chile. I can provide my CV (academic/profesional) upon request. You can reach me at m.sepulveda+spam@mail.utoronto.ca (please remove the +spam or your messages will go to the spam folder).
     </p>
 
     <h2 id="research">Research</h2>
@@ -50,6 +44,10 @@
 
     <p>
         International Relations: Trade Agreements, Sanctions, Tariff and Non-Tariff Measures.
+    </p>
+
+    <p>
+        Canadian Politics: Advocacy Coalitions, Federal Hubs, Canadian Trade Agreements (NAFTA, CUSMA, CPTPP, and others).
     </p>
 
     <p>
