--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </p>
 
     <p>
-        Canadian Politics: Advocacy Coalitions, Federal Hubs, Canadian Trade Agreements (NAFTA, CUSMA, CPTPP, and others).
+        Canadian Politics: Advocacy Coalitions, Federal Hubs, Canadian Trade Agreements (CUSMA, CETA, CPTPP, and others).
     </p>
 
     <p>
