--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <h4>Master in Political Science</h4>
 
     <p>
-        Vargas Sepúlveda, M. "Smart Trade Policy Toolkits" University of Toronto, 2023 (Expected, title may slightly change).
+            Vargas Sepúlveda, M. "Trade Policy Analysis" University of Toronto, 2023 (Expected, title may slightly change).
     </p>
 
     <h4>Master in Statistics</h4>
