--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </p>
 
     <p>
-        Canadian Politics: Advocacy Coalitions, Federal Hubs, Transnational Policymaking with the US and Mexico.
+        Canadian Politics: Advocacy Coalitions, Federal Hubs, CAN-USA-MEX Transnational Policymaking.
     </p>
 
     <p>
