--- a/index.html
+++ b/index.html
@@ -158,19 +158,11 @@
     <h3 id="sql">SQL Databases for students and educators</h3>
 
     <p>Check <a href="https://databases.pacha.dev/">SQL Databases for students and educators</a> if you need access to
-        PostgreSQL, MySQL and SQL Server databases (in strictly descending order of preference!).</p>
+        PostgreSQL databases.</p>
 
     <p>Publicly accessible databases often impose query limits or require registration. Even when I maintain public and
         limit-free APIs, I never wanted to host a public database because the connection string can be problematic for
         users.</p>
-
-    <p>I’ve hosted different light/medium size databases by using PostgreSQL and MariaDB (a modern fork of MySQL)
-        backends. I tend to prefer PostgreSQL because it is easier to configure on the client and server side, without
-        strange tricks (see the Problems with MySQL/Maria and SQL Server section).</p>
-
-    <p>Why these database backends? I think there are an abundance of small edge cases when moving between DB back ends
-        and so testing mnany with live databases is quite valuable. With this resource you can benchmark speed,
-        compression, and DDL types.</p>
 
     <h2 id="books">Books</h2>
 
