--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <center>
+    <div style="text-align: center;">
         <h1 id="title">Mauricio "Pachá" Vargas Sepúlveda</h1>
 
             <a href="javascript:showDiv('about-me')">About me</a>
@@ -23,8 +23,7 @@
             | <a href="javascript:showDiv('books')">Books</a>
             | <a href="javascript:showDiv('r-and-shiny-training')">R and Shiny Training</a>
             | <a href="https://pacha.dev/blog">Blog</a>
-        
-    </center>
+    </div>
 
     <div id="about-me">
 
@@ -53,7 +52,7 @@
 
         <h3>Random reference of the day (brought to you with JavaScript)</h3>
         <p>
-            <script>
+            <script type="text/javascript">
                 printRandomParagraph();
             </script>
         </p>
@@ -366,10 +365,12 @@
 
     </div>
 
-    <a href="https://validator.w3.org/check?uri=referer"><img src="https://www.w3.org/Icons/valid-html401"
-            alt="Valid HTML 4.01 Strict" height="31" width="88" align="right" style="border: 10px solid #fafafa"></a>
+    <div style="text-align: right;">
+        <a href="https://validator.w3.org/check?uri=referer">
+            <img src="https://www.w3.org/Icons/valid-html401-blue" alt="Valid HTML 4.01 Strict" height="31" width="88" style="border: 10px solid #fafafa">
+        </a>
+    </div>
 
-    
 </body>
 
 </html>
