--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
     <div style="text-align: right;">
         <a href="https://validator.w3.org/check?uri=referer">
-            <img src="https://www.w3.org/Icons/valid-html401-blue" alt="Valid HTML 4.01 Strict" height="31" width="88" style="border: 10px solid #fafafa">
+            <img src="https://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Strict" height="31" width="88" style="border: 10px solid #fafafa">
         </a>
     </div>
 
