don't hide title

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 
-    <div style="text-align: center;">
-        <h1 id="title">Mauricio "Pachá" Vargas Sepúlveda</h1>
+    <div id="title" style="text-align: center;">
+        <h1>Mauricio "Pachá" Vargas Sepúlveda</h1>
 
             <a href="javascript:showDiv('about-me')">About me</a>
             | <a href="javascript:showDiv('research')">Research</a>
