--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <h4>Master in Political Science</h4>
 
         <p>
-            Vargas Sepúlveda, M. “NAFTA is the Worst Trade Deal in the History of Trade Deals, Maybe Ever,” University of Toronto, 2023.
+            Vargas Sepúlveda, M. “NAFTA is the Worst Trade Deal in the History of Trade Deals, Maybe Ever.” University of Toronto, 2023.
         </p>
 
         <h4>Master in Statistics</h4>
