add gravity datasets

--- a/index.html
+++ b/index.html
@@ -304,6 +304,15 @@
     
         <h2>Datasets</h2>
 
+        <h3 id="gravitydatasets">Gravity Datasets</h3>
+
+        <p>The tables provided here were reshaped under Cobb's Normal Form, and in some cases contain corrections that I 
+            explain in the <a href="https://github.com/pachadotdev/gravitydatasets">project repository</a>. The specific 
+            sources are the Gravity database from the Center for Prospective Studies and International Information (CEPII),
+            the International Trade and Production Database for Estimation (ITPD-E) and the Dynamic Gravity Database (DGD)
+            from the US International Trade Commission (USITC), and the Structural Gravity Database (SGD) from the World 
+            Trade Organization (WTO).</p>
+
         <h3 id="open-trade-statistics">Open Trade Statistics</h3>
 
         <p>Since 2017 I've maintained <a href="https://tradestatistics.io">Open Trade Statistics</a>, a project created with
