--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         <h2>About me</h2>
 
         <p>
-            I am an MA student in Political Science at the University of Toronto. My research interests include International Relations, 
-            Canadian Politics and Public Policy, with a focus on the politics of trade agreements and sanctions. I have a Master in 
-            Statistics from the Catholic University of Chile and an Engineering degree from the University of Chile. I can provide my 
-            CV (academic/professional) upon request. You can reach me at m.sepulveda+removethis@mail.utoronto.ca (please remove the +removethis).
+            I am a PhD student in Political Science at the University of Toronto. My research interests include International Relations, 
+            Canadian Politics and Public Policy, with a focus on the politics of trade agreements and sanctions. I have a Master of Arts
+            in Political Science from the University of Toronto, a Master of Science in Statistics from the Catholic University of Chile,
+            and an Engineering degree from the University of Chile. I can provide my CV (academic/professional) upon request. You can 
+            reach me at m.sepulveda+removethis@mail.utoronto.ca (please remove the +removethis).
         </p>
 
         <p>
