--- a/index.html
+++ b/index.html
@@ -89,12 +89,62 @@
         </p>
 
         <h3>Published Articles</h3>
+        
+        <p>
+            Vargas, Mauricio. 2020. “Economiccomplexity: Computational Methods for Economic Complexity.” <i>Journal of Open Source Software</i> 5 (46): 1866. <a href="https://doi.org/10.21105/joss.01866">https://doi.org/10.21105/joss.01866</a>.
+        </p>
+
+            <p style="margin-left: 2em;">Cited by</p>
+
+            <p style="margin-left: 2em;">
+                Sankot, Ondřej, Tereza De Castro, Jana Vlčková, and Cristina Procházková Ilinitchi. 2023. “Mapping of Capabilities and Export Opportunities of Czechia.” <i>Prague Economic Papers</i> 32 (2): 159–83. <a href="https://doi.org/10.18267/j.pep.829">https://doi.org/10.18267/j.pep.829</a>.
+            </p>
+
+            <p style="margin-left: 2em;">
+                Guerzoni, Marco, Massimiliano Nuccio, and Federico Tamagni. 2022. “Discovering Pre-Entry Knowledge Complexity with Patent Topic Modeling and the Post-Entry Growth of Italian Firms.” LEM Papers Series. Laboratory of Economics and Management (LEM), Sant’Anna School of Advanced Studies, Pisa, Italy. <a href="https://econpapers.repec.org/paper/ssalemwps/2022_2f25.htm">https://econpapers.repec.org/paper/ssalemwps/2022_2f25.htm</a>.
+            </p>
+
+            <p style="margin-left: 2em;">
+                Ondoš, Slavomír, Žofia Sinčáková, and Oto Hudec. 2022. “Advancement and New Spatial Patterns of the Creative Sector in the Old Industrial Structure.” In <i>The Creative Class Revisited</i>, 241–67. World Scientific. <a href="https://doi.org/10.1142/9789811267659_0009">https://doi.org/10.1142/9789811267659_0009</a>.
+            </p>
+
+            <p style="margin-left: 2em;">
+                Plessis, Michael du, and Wouter Bam. 2022. “Iops: A Python Package for the Input-Output Product Space Methodology.” In <i>2022 IEEE 28th International Conference on Engineering, Technology and Innovation (ICE/ITMC) & 31st International Association For Management of Technology (IAMOT) Joint Conference</i>, 1–8. <a href="https://doi.org/10.1109/ICE/ITMC-IAMOT55089.2022.10033299">https://doi.org/10.1109/ICE/ITMC-IAMOT55089.2022.10033299</a>.
+            </p>
+
+            <p style="margin-left: 2em;">
+                Meier, M. 2020. “Green Growth in the Technology Space – Regional Diversification Pathways in Europe.” Master Thesis. <a href="https://studenttheses.uu.nl/handle/20.500.12932/38037">https://studenttheses.uu.nl/handle/20.500.12932/38037</a>.
+            </p>
+
+            <p style="margin-left: 2em;">
+                Pérez-Hernández, Carla Carolina, Blanca Cecilia Salazar-Hernández, Jessica Mendoza-Moheno, Erika Cruz-Coria, and Martín Aubert Hernández-Calzada. 2021. “Mapping the Green Product-Space in Mexico: From Capabilities to Green Opportunities.” <i>Sustainability</i> 13 (2): 945. <a href="https://doi.org/10.3390/su13020945">https://doi.org/10.3390/su13020945</a>.
+            </p>
 
         <p>
-            Wölwer, A.L., Burgard, J.P., Kunst, J., and Vargas Sepúlveda, M. “Gravity: Estimation Methods for Gravity Models in R.”
-            <i>Journal of Open Source Software</i> 3, no. 31 (November 19, 2018): 1038. <a href="https://doi.org/10.21105/joss.01038">
-                https://doi.org/10.21105/joss.01038</a>.
+            Wölwer, Anna-Lena, Jan Pablo Burgard, Joshua Kunst, and Mauricio Vargas. 2018. “Gravity: Estimation Methods for Gravity Models in R.” <i>Journal of Open Source Software</i> 3 (31): 1038. <a href="https://doi.org/10.21105/joss.01038">https://doi.org/10.21105/joss.01038</a>.
         </p>
+
+            <p style="margin-left: 2em;">Cited by</p>
+
+            <p style="margin-left: 2em;">
+                Moravec, Petr. 2022. “Impacts of Brexit Referendum on European Banks: Evidence from Country-by-Country Reporting.” Univerzita Karlova, Fakulta sociálních věd. <a href="https://dspace.cuni.cz/handle/20.500.11956/174029">https://dspace.cuni.cz/handle/20.500.11956/174029</a>.
+            </p>
+            
+            <p style="margin-left: 2em;">
+                Oshan, Taylor M. 2022. “Spatial Interaction Modeling.” OSF Preprints. <a href="https://doi.org/10.31219/osf.io/m3ah8">https://doi.org/10.31219/osf.io/m3ah8</a>.
+            </p>
+
+            <p style="margin-left: 2em;">
+                Herman, Peter. 2021. “Gegravity: General Equilibrium Gravity Modeling in Python.” SSRN Scholarly Paper. Rochester, NY. <a href="https://doi.org/10.2139/ssrn.3832208">https://doi.org/10.2139/ssrn.3832208</a>.
+            </p>
+
+            <p style="margin-left: 2em;">
+                Ha, Le. 2021. “Impacts of COVID-19 Pandemic on International Trade in Goods of OECD Countries.” <i>VNU Journal of Economics and Business</i> 1 (2). <a href="https://js.vnu.edu.vn/EAB/article/view/4574">https://js.vnu.edu.vn/EAB/article/view/4574</a>.
+            </p>
+
+            <p style="margin-left: 2em;">
+                Porto, Massimiliano. 2020. “The Gravity Model of Trade.” In <i>Using R for Trade Policy Analysis: R Codes for the UNCTAD and WTO Practical Guide</i>, edited by Massimiliano Porto, 65–81. SpringerBriefs in Economics. Cham: Springer International Publishing. <a href="https://doi.org/10.1007/978-3-030-34529-7_4">https://doi.org/10.1007/978-3-030-34529-7_4</a>.
+            </p>
 
         <h3>Pre-Prints</h3>
 
