--- a/index.html
+++ b/index.html
@@ -395,6 +395,11 @@
     
         <h2>Books</h2>
 
+        <p>
+            Vargas Sepúlveda, M. <i>The Hitchhiker's Guide to Econometrics</i>. 1st ed. Victoria: Leanpub, 2023. 
+            <a href="https://leanpub.com/econometrics-guide">https://leanpub.com/econometrics-guide</a>.
+        </p>
+
         <p>Vargas Sepúlveda, M. <i>Solutions Manual for An Advanced Guide to Trade Policy Analysis in R</i>. 2nd ed. Bangkok: UN ESCAP, 
             2022. <a href="https://r.tiid.org/R_structural_gravity/">https://r.tiid.org/R_structural_gravity/</a>.
         </p>
