--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             International
             Relations, Canadian Politics, and Public Policy. My research primarily focuses on the political dynamics of
             trade
-            agreements and sanctions. My academic background includes a Master of Arts in Political Science from the
+            agreements and sanctions.
+        </p>
+        <p>My academic background includes a Master of Arts in Political Science from the
             University
             of Toronto, a Master of Science in Statistics from the Catholic University of Chile, and an Engineering
             degree from
@@ -49,12 +51,10 @@
             '+removethis' to use the correct email).
         </p>
         <p>
-            I am convinced that comprehensive understanding of the efficacy of sanctions can be achieved by integrating
-            ideas, interests, institutions, and structures. This approach seeks to find the method in the madness behind
-            sanctions, which arise from both domestic factors (such as strategic signaling targeted at voters) and
-            international concerns regarding civil and political rights issues. Sanctions are ternary operations
-            consisting in deviations from free trade and financial patterns that aim at dissuading conflict. My study
-            employs Natural Language Processing (NLP) and Econometrics to analyze and quantify the economic
+            I am convinced that a comprehensive understanding of economic and financial sanctions between countries can
+            be achieved by integrating
+            ideas, interests, institutions, and structures. I aim at studying this combining Natural Language Processing
+            (NLP) and Econometrics to analyze and quantify the economic
             repercussions of sanctions. This is detailed in the <a href="javascript:showDiv('research')">Research</a>
             section.
         </p>
@@ -86,7 +86,7 @@
 
         <h3>Random reference of the day (brought to you with JavaScript)</h3>
         <p>
-            <script type="text/javascripSt">
+            <script type="text/javascript">
                 printRandomParagraph();
             </script>
         </p>
