--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>
             I am currently pursuing a PhD in Political Science at the University of Toronto, specializing in
             International
-            Relations, Canadian Politics, and Public Policy. My research primarily focuses on the political dynamics of
+            Relations and Public Policy. My research primarily focuses on the political dynamics of
             trade
             agreements and sanctions.
         </p>
