--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         | <a href="javascript:showDiv('books')">Books</a>
         | <a href="javascript:showDiv('r-and-shiny-training')">R and Shiny Training</a>
         | <a href="https://pacha.dev/blog">Blog</a>
+        | <a href="javascript:showDiv('replication')">Replication</a>
     </div>
 
     <div id="about-me">
@@ -537,7 +538,28 @@
 
     </div>
 
-    <div style="text-align: right;">
+    <div id="replication">
+        <h2>Replication</h2>
+
+        <p>I tend to replicate all the articles and books I read. This usually involves redoing all the math when
+            something is not clear or trying to recreate tables with R or Python.</p>
+
+        <p>Here are some of the articles and books I have replicated:</p>
+
+        <p>
+            Melitz, Marc J. 2003. “The Impact of Trade on Intra-Industry Reallocations and Aggregate Industry
+            Productivity.” <i>Econometrica</i> 71 (6): 1695–1725. https://doi.org/10.1111/1468-0262.00467.
+            <a href="https://pacha.dev/trade-notes/melitz/retracing.pdf">Math step by step</a>.
+        </p>
+
+        <p>Yotov, Yoto V., Roberta Piermartini, José-Antonio Monteiro, and Mario Larch. 2017. <i>An Advanced Guide to
+                Trade Policy Analysis: The Structural Gravity Model</i>. United Nations.
+            https://doi.org/10.18356/57a768e5-en.
+            <a href="https://pacha.dev/tradepolicy/">Tables and figures replication with R</a>.
+        </p>
+    </div>
+
+    <div style=" text-align: right;">
         <a href="https://validator.w3.org/check?uri=referer">
             <img src="https://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Strict" height="31" width="88"
                 style="border: 10px solid #fafafa">
