hide replication by default

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 
     </div>
 
-    <div id="replication">
+    <div id="replication" style="display:none;">
         <h2>Replication</h2>
 
         <p>I tend to replicate all the articles and books I read. This usually involves redoing all the math when
