--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <h2>About me</h2>
 
         <p>
-            I am currently pursuing a PhD in Political Science at the University of Toronto, specializing in
+            I am a PhD student in Political Science at the University of Toronto, specializing in
             International
             Relations and Public Policy. My research primarily focuses on the political dynamics of
-            trade
-            agreements and sanctions.
+            trade agreements and sanctions. Due to this interest, I am a Fellow at the <a
+                href="https://munkschool.utoronto.ca/">Munk School of Global Affairs and Public Policy</a>.
         </p>
         <p>My academic background includes a Master of Arts in Political Science from the
             University
@@ -48,8 +48,7 @@
             degree from
             the University of Chile. Should you need it, I can provide my academic and professional CV upon request. For
             any
-            queries or further information, please contact me at m.sepulveda+removethis@mail.utoronto.ca (remove the
-            '+removethis' to use the correct email).
+            queries or further information, please contact me at <span id="email"></span>.
         </p>
         <p>
             I am convinced that a comprehensive understanding of economic and financial sanctions between countries can
