--- a/index.html
+++ b/index.html
@@ -551,6 +551,12 @@
             <a href="https://pacha.dev/trade-notes/melitz/retracing.pdf">Math step by step</a>.
         </p>
 
+        <p>
+            Silva, J. M. C. Santos, and Silvana Tenreyro. 2006. “The Log of Gravity.” <i>The Review of Economics and
+                Statistics</i> 88 (4): 641–58. https://doi.org/10.1162/rest.88.4.641. <a
+                href="https://pacha.dev/log-of-gravity/replication.pdf">Tables replication witn R</a>.
+        </p>
+
         <p>Yotov, Yoto V., Roberta Piermartini, José-Antonio Monteiro, and Mario Larch. 2017. <i>An Advanced Guide to
                 Trade Policy Analysis: The Structural Gravity Model</i>. United Nations.
             https://doi.org/10.18356/57a768e5-en.
