--- a/index.html
+++ b/index.html
@@ -541,10 +541,23 @@
         <h2>Replication</h2>
 
         <p>I tend to replicate all the articles and books I read. This usually involves redoing all the math when
-            something is not clear or trying to recreate tables with R or Python.</p>
+            something is not clear (i.e., not clear to me) or trying to recreate tables with R or Python.</p>
+
+        <!-- insert image here -->
+        <center>
+            <figure>
+                <img src="willitreplicate.jpg" alt="Will it replicate?" style="width: 50%;">
+                <figcaption>Will it replicate? as in 'Will it Blend?'</figcaption>
+            </figure>
+        </center>
 
         <p>Here are some of the articles and books I have replicated:</p>
 
+        <p>
+            Feenstra, Robert C. 2004. <i>Advanced International Trade: Theory and Evidence</i>. Princeton, N.J:
+            Princeton University Press.
+            <a href="https://pacha.dev/advanced-international-trade-in-r/">Tables replication with R</a>.
+        </p>
         <p>
             Melitz, Marc J. 2003. “The Impact of Trade on Intra-Industry Reallocations and Aggregate Industry
             Productivity.” <i>Econometrica</i> 71 (6): 1695–1725. https://doi.org/10.1111/1468-0262.00467.
