link to capybara

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         <h3 id="selected-r-packages">Selected R packages</h3>
 
         <ul>
-            <li><a href="https://github.com/pachadotdev/fixest/tree/cpp11-some-r-refactoring">Fixest2</a>: Efficient
+            <li><a href="https://github.com/pachadotdev/capybara">Capybara</a>: Efficient
                 Fixed-Effects Estimation in R With C++ 11 Backend.</li>
             <li><a href="https://github.com/pachadotdev/desta">DESTA (R version)</a>: The Design of Trade Agreements
                 Database.</li>
