update cited by

--- a/index.html
+++ b/index.html
@@ -204,13 +204,20 @@
         <h3>Published Articles</h3>
 
         <p>
-            Vargas, Mauricio. 2020. "Economiccomplexity: Computational Methods
+            Vargas Sepúlveda, Mauricio. 2020. "Economiccomplexity: Computational Methods
             for Economic Complexity." <i>Journal of Open Source Software</i> 5
             (46): 1866.
             <a href="https://doi.org/10.21105/joss.01866">https://doi.org/10.21105/joss.01866</a>.
         </p>
 
         <p style="margin-left: 2em;">Cited by</p>
+
+        <p style="margin-left: 2em;">
+            Ondoš, Slavomír, Žofia Sinčáková, and Hudec Oto. 2024. "The Re-Emergence
+            of Left-behind Regions: The End of Spatial Equity and the Rise of
+            Dynamic Movements in Slovakia, 1990-2020." Regional Statistics 14 (02): 258-82.
+            <a href="https://www.ceeol.com/search/article-detail?id=1239396">https://www.ceeol.com/search/article-detail?id=1239396</a>.
+        </p>
 
         <p style="margin-left: 2em;">
             Guerzoni, Marco, Massimiliano Nuccio, and Federico Tamagni. "Pre-
@@ -221,10 +228,17 @@
         </p>
 
         <p style="margin-left: 2em;">
+            Vallim, Alberto, and Leonardo Monasterio. 2023. "Crescimento econômic
+            regional e complexidade: o papel das microempresas e dos MEI." Revista
+            Brasileira de Estudos Regionais e Urbanos 17 (1): 131-54.
+            <a href="https://doi.org/10.54766/rberu.v17i1.992">https://doi.org/10.54766/rberu.v17i1.992</a>.
+        </p>
+
+        <p style="margin-left: 2em;">
             Sankot, Ondřej, Tereza De Castro, Jana Vlčková, and Cristina
             Procházková Ilinitchi. 2023. "Mapping of Capabilities and Export
             Opportunities of Czechia." <i>Prague Economic Papers</i> 32 (2):
-            159–83.
+            159-83.
             <a href="https://doi.org/10.18267/j.pep.829">https://doi.org/10.18267/j.pep.829</a>.
         </p>
 
@@ -271,7 +285,7 @@
 
         <p>
             Wölwer, Anna-Lena, Jan Pablo Burgard, Joshua Kunst, and Mauricio
-            Vargas. 2018. "Gravity: Estimation Methods for Gravity Models in
+            Vargas Sepúlveda. 2018. "Gravity: Estimation Methods for Gravity Models in
             R." <i>Journal of Open Source Software</i> 3 (31): 1038.
             <a href="https://doi.org/10.21105/joss.01038">https://doi.org/10.21105/joss.01038</a>.
         </p>
@@ -327,10 +341,22 @@
         </p>
 
         <h3>Pre-Prints</h3>
+        
+        <p>
+            Vargas Sepúlveda, Mauricio. 2024. "Kendallknight: Efficient Implementation
+            of Kendall's Correlation Coefficient Computation." arXiv.
+            <a href="https://doi.org/10.48550/arXiv.2408.09618">https://doi.org/10.48550/arXiv.2408.09618</a>.
+        </p>
 
         <p>
-            Vargas Sepúlveda, M. "Economic Effects of Chile FTAs and an Eventual
-            CTPP Accession." arXiv, September 28, 2022.
+            Vargas Sepúlveda, Mauricio, and Jonathan Schneider Malamud. 2024.
+            "cpp11armadillo: An R Package to Use the Armadillo C++ Library." arXiv.
+            <a href="https://doi.org/10.48550/arXiv.2408.11074">https://doi.org/10.48550/arXiv.2408.11074</a>.
+        </p>
+
+        <p>
+            Vargas Sepúlveda, Mauricio. 2022.
+            "Economic Effects of Chile FTAs and an Eventual CTPP Accession." arXiv.
             <a href="https://doi.org/10.48550/arXiv.2209.14748">https://doi.org/10.48550/arXiv.2209.14748</a>.
         </p>
 
@@ -339,14 +365,14 @@
         <h4>Master in Political Science</h4>
 
         <p>
-            Vargas Sepúlveda, M. "NAFTA is the Worst Trade Deal in the History
+            Vargas Sepúlveda, Mauricio. "NAFTA is the Worst Trade Deal in the History
             of Trade Deals, Maybe Ever." University of Toronto, 2023.
         </p>
 
         <h4>Master in Statistics</h4>
 
         <p>
-            Vargas Sepúlveda, M. "Gravity Modelling Into R: Strengthening
+            Vargas Sepúlveda, Mauricio. "Gravity Modelling Into R: Strengthening
             Analytical Capacity of ESCAP Member States." UN ESCAP and P. U.
             Católica de Chile, 2021.
         </p>
