--- a/uoft_useful_info.html
+++ b/uoft_useful_info.html
@@ -6,6 +6,6 @@
       <meta http-equiv = "refresh" content = "0; url = https://docs.google.com/document/d/1LZ2Coeo3retE8S6_LZeFzBfoMtDpm_X-/edit?usp=sharing&ouid=115091451666829859711&rtpof=true&sd=true" />
    </head>
    <body>
-      <p>Redirecting to GitHub</p>
+      <p>Redirecting to Google Docs...</p>
    </body>
 </html>
