fix JMC SANTOS SILVA

--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
         </p>
 
         <p>
-            Silva, J. M. C. Santos, and Silvana Tenreyro. 2006. "The Log of Gravity." <i>The Review of Economics and
+            Santos Silva, Joao, and Silvana Tenreyro. 2006. "The Log of Gravity." <i>The Review of Economics and
                 Statistics</i> 88 (4): 641–58. https://doi.org/10.1162/rest.88.4.641. <a
                 href="https://pacha.dev/log-of-gravity/replication.pdf">Tables replication witn R</a>.
         </p>
