add freedom house data

--- a/index.html
+++ b/index.html
@@ -546,6 +546,8 @@
         <h3 id="selected-r-packages">Selected R packages</h3>
 
         <ul>
+            <li><a href="https://github.com/pachadotdev/freedomhouse">Freedomhouse</a>: A tidy version of Freedom House
+                datasets with added ISO country codes and texts with the sub-item justification.</li>
             <li><a href="https://github.com/pachadotdev/capybara">Capybara</a>: Efficient
                 Fixed-Effects Estimation in R With C++ 11 Backend.</li>
             <li><a href="https://github.com/pachadotdev/desta">DESTA (R version)</a>: The Design of Trade Agreements
@@ -604,6 +606,14 @@
     <div id="datasets" style="display:none;">
 
         <h2>Datasets</h2>
+
+        <h3 id="freedomhouse">Freedom House</h3>
+
+        <p>I have provided an Excel version of the Freedom House datasets in the R package "freedomhouse" 
+            <a href="https://github.com/pachadotdev/freedomhouse/raw/main/exported-spreadsheets/freedom-house-excel.zip">here</a>.
+            The added value is that it tidied the data from their spreadsheets and I added the ISO codes fo the countries and the justification text
+            for each sub-item where those were available. Check <a href="https://pacha.dev/freedomhouse">here</a> for more details.
+        </p>
 
         <h3 id="gravitydatasets">Gravity Datasets</h3>
 
