update pre-prints and pkgs

--- a/index.html
+++ b/index.html
@@ -343,6 +343,16 @@
         <h3>Pre-Prints</h3>
         
         <p>
+            Vargas Sepúlveda, Mauricio. 2024. "Replicating The Log of Gravity." arXiv.
+            <a href="https://doi.org/10.48550/arXiv.2409.09066">https://doi.org/10.48550/arXiv.2409.09066</a>.
+        </p>
+
+        <p>
+            Vargas Sepúlveda, Mauricio. 2024. "Welding R and C++: A Tale of Two Programming Languages." arXiv.
+            <a href="https://doi.org/10.48550/arXiv.2409.00568">https://doi.org/10.48550/arXiv.2409.00568</a>.
+        </p>
+
+        <p>
             Vargas Sepúlveda, Mauricio. 2024. "Kendallknight: Efficient Implementation
             of Kendall's Correlation Coefficient Computation." arXiv.
             <a href="https://doi.org/10.48550/arXiv.2408.09618">https://doi.org/10.48550/arXiv.2408.09618</a>.
@@ -546,10 +556,18 @@
         <h3 id="selected-r-packages">Selected R packages</h3>
 
         <ul>
+            <li><a href="https://github.com/pachadotdev/cpp11tesseract">Cpp11tesseract</a>: R bindings to the
+                Tesseract C++ library for optical character recognition (OCR).</li>
             <li><a href="https://github.com/pachadotdev/freedomhouse">Freedomhouse</a>: A tidy version of Freedom House
                 datasets with added ISO country codes and texts with the sub-item justification.</li>
             <li><a href="https://github.com/pachadotdev/capybara">Capybara</a>: Efficient
                 Fixed-Effects Estimation in R With C++ 11 Backend.</li>
+            <li><a href="https://github.com/pachadotdev/cpp11armadillo">Cpp11armadillo</a>: Provides function declarations
+                and inline function definitions that facilitate communication between R and the Armadillo C++ library for
+                linear algebra and scientific computing.</li>
+            <li><a href="https://github.com/pachadotdev/cpp11eigen">Cpp11eigen</a>: Provides function declarations
+                and inline function definitions that facilitate communication between R and the Eigen C++ library for
+                linear algebra and scientific computing.</li>
             <li><a href="https://github.com/pachadotdev/desta">DESTA (R version)</a>: The Design of Trade Agreements
                 Database.</li>
             <li><a href="https://github.com/pachadotdev/usitcgravity">USITC Gravity</a>: Database Adapted From the
