--- a/index.html
+++ b/index.html
@@ -556,6 +556,8 @@
         <h3 id="selected-r-packages">Selected R packages</h3>
 
         <ul>
+            <li><a href="https://github.com/ropensci/tabulapdf">TabulaPDF</a>: R bindings to the
+                Tabula Java library for PDF tables extraction.</li>
             <li><a href="https://github.com/pachadotdev/cpp11tesseract">Cpp11tesseract</a>: R bindings to the
                 Tesseract C++ library for optical character recognition (OCR).</li>
             <li><a href="https://github.com/pachadotdev/freedomhouse">Freedomhouse</a>: A tidy version of Freedom House
