--- a/index.html
+++ b/index.html
@@ -90,5 +90,12 @@
         </p>
 
     </div>
+
+    <div style=" text-align: right;">
+        <a href="https://validator.w3.org/check?uri=referer">
+            <img src="https://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Strict" height="31" width="88"
+                style="border: 10px solid #fafafa">
+        </a>
+    </div>
 </body>
 </html>
